[gd_scene load_steps=14 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://StartAim.gd" type="Script" id=7]
[ext_resource path="res://art/arrow.png" type="Texture" id=8]
[ext_resource path="res://art/level_beat.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 0.1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 0.1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 0.1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 400, 0.1 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Walls" type="Node" parent="."]

[node name="Top" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
position = Vector2( 400, 0 )
shape = SubResource( 1 )

[node name="Right" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2( 800, 512 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Left" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2( 0, 512 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Bottom" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
position = Vector2( 400, 1024 )
shape = SubResource( 4 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 955 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="StartAim" type="KinematicBody2D" parent="."]
position = Vector2( 400, 954 )
rotation = 4.71239
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="StartAim"]
position = Vector2( 42, 0 )
scale = Vector2( 0.1, 0.05 )
texture = ExtResource( 8 )

[node name="LevelComplete" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="hit" from="Ball" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
